# periodic_table

./: .gitignore  .travis.yml  Cargo.toml  build.rs  data.csv  lib.rs.tpl  readme.md
src/: element.rs  lib.rs  main.rs  test.rs
src/test/: mod.rs
templates/: elements.rs  lib.rs
