[package]
name = "periodic_table"
version = "0.3.2"
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
readme = "readme.md"
description = "Library that provides a list of elements in the periodic table"
license = "MIT"
repository = "https://github.com/trangar/periodic_table"
edition = "2018"

[build-dependencies]
askama = "0.11"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
